Change: Use image

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 services:
   main:
-    build: .
+    image: "ghcr.io/sevenc-nanashi/opensticky"
 
     volumes:
       - "./db_data.json:/app/db_data.json"
-    
+
     environment:
       - "TOKEN"
-
+      - "PREFIX"
