--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     image: "ghcr.io/sevenc-nanashi/opensticky"
 
     volumes:
-      - "./db_data.json:/app/db_data.json"
+      - "${PWD}/db_data.json:/app/db_data.json"
 
     environment:
       - "TOKEN"
