--- a/package.json
+++ b/package.json
@@ -1,33 +1,31 @@
 {
   "name": "opensticky",
   "version": "1.0.0",
+  "type": "module",
   "description": "",
   "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node index.ts",
+    "start": "tsx index.ts",
     "build": "tsc",
     "typecheck": "tsc --noEmit",
-    "lint": "eslint --ext .ts ."
+    "lint": "biome check"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "async-lock": "^1.4.0",
-    "discord.js": "^14.7.1",
-    "dotenv": "^16.0.3",
-    "ts-node": "^10.9.1"
+    "@core/asyncutil": "npm:@jsr/core__asyncutil@^1.2.0",
+    "async-lock": "^1.4.1",
+    "discord.js": "^14.16.3",
+    "dotenv": "^16.4.5"
   },
   "devDependencies": {
-    "@types/async-lock": "^1.3.0",
-    "@types/node": "^18.11.18",
-    "@typescript-eslint/eslint-plugin": "^5.48.0",
-    "@typescript-eslint/parser": "^5.48.0",
-    "eslint": "^8.31.0",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.8.2",
-    "typescript": "^4.9.4"
+    "@biomejs/biome": "1.9.4",
+    "@types/async-lock": "^1.4.2",
+    "@types/node": "^22.9.0",
+    "prettier": "^3.3.3",
+    "tsx": "^4.19.2",
+    "typescript": "^5.6.3"
   }
 }
