--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,16 +10,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Setup pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          version: 7
+        run: |
+          npx corepack enable
       - name: Setup node
         uses: actions/setup-node@v3
         with:
-          node-version: "16.17"
+          node-version-file: .node-version
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
